# thesis

./: H.m  fftx.m  first_ewald.m  first_ewald.m~  gtau.m  main.m  nufft.py  nufft_1.m  param_select.m
SE_Stokes-master/: .gitignore  CMakeLists.txt  README.md
SE_Stokes-master/SE0P_Stokes/: TODO_OPEN  init.m  stokeslet_demo.m
SE_Stokes-master/SE0P_Stokes/mex/: stokeslet_fast_fs_k_scaling.c  stresslet_fast_fs_k_scaling.c
SE_Stokes-master/SE0P_Stokes/src/: se0p_fourier_space.m  se0p_k_scaling.m  se0p_k_scaling_kaiser.m  se0p_parse_params.m  se0p_precomp.m  stokeslet_fourier_space.m  stokeslet_precomp.m
SE_Stokes-master/SE1P_Stokes/: init.m  stokeslet_demo.m
SE_Stokes-master/SE1P_Stokes/src/: fftnd1p.m  ifftnd1p.m  se1p_fourier_space.m  se1p_k_scaling.m  se1p_k_scaling_kaiser.m  se1p_parse_params.m  se1p_precomp.m  se1p_precomp_kaiser.m  se1p_window_precomp.m
SE_Stokes-master/SE1P_Stokes/tests/: test_stokeslet_real.m
SE_Stokes-master/SE2P_Stokes/: init.m  stokeslet_demo.m
SE_Stokes-master/SE2P_Stokes/src/: fftnd2p.m  ifftnd2p.m  se2p_fourier_space.m  se2p_k_scaling.m  se2p_k_scaling_kaiser.m  se2p_parse_params.m  se2p_precomp.m  se2p_window_precomp.m
SE_Stokes-master/SE3P_Stokes/: demo_kaiser.m  init.m  stokeslet_k_error.m
SE_Stokes-master/SE3P_Stokes/mex/: se3p_fast_k_scaling.c
SE_Stokes-master/SE3P_Stokes/src/: se3p_fourier_space.m  se3p_k_scaling_kaiser.m  se3p_window_precomp.m
SE_Stokes-master/SE_Stokes_direct/mex/: SE_Stokes_direct_mex.c
SE_Stokes-master/SE_fast_gridding/: SE_fkg.c  chebyshev.c  chebyshev.h  grid_force.c  output.txt  test_opt.c  test_opt.h
SE_Stokes-master/SE_fast_gridding/mex/: SE_fg_grid_split_thrd_kaiser_mex.c  SE_fg_grid_thrd_kaiser_mex.c
SE_Stokes-master/cmake-compat/: FindGSL.cmake
SE_Stokes-master/test/: erms_p_3p_0p.m  time_rms_3p_0p.m
SE_Stokes-master/util/: precomp_kaiser.m  se3p_parse_params.m
SE_Stokes_run/: CMakeLists.txt
SE_Stokes_run/SE3P_Stokes/: .P_error.m.swp  .amp_param.m.swp  .param_select.m.swp  1  MP_times.m  P_error.asv  P_error.m  amp_param.asv  amp_param.m  demo.m  demo.m~  demo_Stokes_prel.m  demo_final.asv  demo_final.m  myinit.m  outdata.txt  param_select.asv  param_select.m  param_select_approx.m  param_select_stokes.asv  param_select_stokes.m  plotscript.m  poly_try.m  refmat.mat  refval.mat  rms_a.m  strat_comp.asv  strat_comp.m  test_file.m  test_function.m  testdata.txt  testdata1.txt  testdata2.txt  testdata3.txt  testdata4.txt  testdata5.txt  testdata6.txt  testdata7.txt  testdata8.txt  testdata9.txt  (+9 more)
SE_Stokes_run/SE3P_Stokes/mex/: CMakeLists.txt
SE_Stokes_run/SE3P_Stokes/src/: SE3P_Laplace_gridding_precomp.m  SE3P_Stokes.m  SE3P_Stokes_scaling.asv  SE3P_Stokes_scaling.m  SE3P_Stokes_scaling.m~  SE3P_gridding_precomp.m  rms_a.m  se3p_k_scaling_kaiser.m  se3p_window_precomp.m
SE_Stokes_run/SE_Stokes_direct/mex/: CMakeLists.txt  SE1P_Stokes_direct.c  SE3P_Stokes_direct.c  SE_Stokes_direct.h
SE_Stokes_run/SE_fast_gridding/: CMakeLists.txt
SE_Stokes_run/SE_fast_gridding/mex/: SE_fg_extend_fcn_kaiser_mex.c  SE_fg_extend_fcn_mex.c  SE_fg_grid_split_thrd_mex.c  SE_fg_int_force_mex.c  SE_fg_int_mex.c  SE_fg_int_split_force_mex.c  SE_fg_int_split_kaiser_force_mex.c  SE_fg_int_split_mex.c  SE_fgg_base_gaussian_mex.c  SE_fgg_expand_all_force_mex.c  SE_fkg_expand_all_force_mex.c  SE_fkg_expand_all_mex.c
SE_Stokes_run/SE_fast_gridding/src/: SE_fgg.c  SE_fgg_MEX_params.c  SE_fgg_thrd.c  SE_fkg_force.c  dev_generate_basic_kaiser_poly.m  dev_generate_basic_kaiser_poly_deriv.m  dev_generate_polynomial_code.m  gen_basic_kaiser_poly_deriv.c
SE_Stokes_run/util/: SE1P_window_fft_precomp.m  SE3P_window_fft_precomp.m  rmse.m
SE_reset-master/: CMakeLists.txt  README.md  SE3P_Stokes.m~  init.m
SE_reset-master/SE0P_Laplace/: demo.m  force_demo.m  init.m
SE_reset-master/SE0P_Laplace/src/: SE0P_Laplace_fourier_space.m  SE0P_Laplace_gridding_precomp.m  SE0P_Laplace_kernel_fft_precomp.m  SE0P_Laplace_real_space.m  SE0P_Laplace_real_space_force.m  SE0P_Laplace_scaling.m  SE0P_parse_params.m  SE0P_warnings.m
SE_reset-master/SE1P_Laplace/: demo.m  force_demo.m  init.m
SE_reset-master/SE1P_Laplace/src/: SE1P_Laplace_fftnd.m  SE1P_Laplace_fourier_space.m  SE1P_Laplace_gridding_precomp.m  SE1P_Laplace_ifftnd.m  SE1P_Laplace_scaling.m
SE_reset-master/SE1P_Laplace/tests/: determine_many_n.m  determine_single_n.m
SE_reset-master/SE2P_Laplace/: demo.m  init.m
SE_reset-master/SE2P_Laplace/src/: SE2P_Laplace_fftnd.m  SE2P_Laplace_fourier_space.m  SE2P_Laplace_gridding_precomp.m  SE2P_Laplace_ifftnd.m  SE2P_Laplace_scaling.m
SE_reset-master/SE2P_Laplace/tests/: determine_single_n.m
SE_reset-master/SE3P_Laplace/: demo.m  force_demo.m  init.m
SE_reset-master/SE3P_Laplace/mex/: CMakeLists.txt  SE3P_Laplace_real_rc_cell.c  cell_list.c
SE_reset-master/SE3P_Laplace/src/: SE3P_Laplace_fourier_space.m  SE3P_Laplace_real_space.m  SE3P_Laplace_scaling.m
SE_reset-master/SE3P_Laplace/tests/: .gitignore  show_P_error.m
SE_reset-master/SE_Laplace_direct/: SE0P_Laplace_direct_full.m  SE0P_Laplace_direct_full_force.m
SE_reset-master/SE_Laplace_direct/mex/: CMakeLists.txt  SE1P_Laplace_direct_fd.c  SE1P_Laplace_direct_k0.c  SE2P_Laplace_direct_fd.c  SE2P_Laplace_direct_k0.c  SE3P_Laplace_direct.c  SE3P_Laplace_direct_fd.c  SE3P_Laplace_direct_real.c  SE3P_Laplace_direct_self.c
SE_reset-master/SE_fast_gridding/mex/: SE_fg_grid_kaiser_mex.c  SE_fg_grid_mex.c  SE_fg_grid_split_force_mex.c  SE_fg_grid_split_kaiser_mex.c  SE_fg_grid_split_mex.c  SE_fg_grid_thrd_mex.c  SE_fg_int_extended_split_mex.c  SE_fg_int_kaiser_force_mex.c  SE_fg_int_kaiser_mex.c  SE_fg_int_split_kaiser_mex.c  SE_fgg_expand_all_mex.c
SE_reset-master/SE_fast_gridding/src/: SE_fg_windows.c  SE_fg_windows.h  SE_fgg.h  SE_fkg.c  SE_fkg.h  gen_basic_kaiser_poly.c
SE_reset-master/paper_plots/: comp_fig5.m  comp_figT1.m  comp_figT2.m  init.m  plot_fig5.m  plot_figT1.m  plot_figT2.m  test_fd_timing.m
SE_reset-master/util/: NEW_k_vectors.m  NEW_vector_system.m  SE0P_window_fft_precomp.m  SE2P_window_fft_precomp.m  SE3P_window_fft_precomp.m
(+1 files in other folders)
